--- a/index.html
+++ b/index.html
@@ -18,20 +18,33 @@
   <body>
     <!--jumbotron-->
     <div class="jumbotron">
-      <h1 class="display-4">Hello, world!</h1>
-      <p class="lead">
-        This is a simple hero unit, a simple jumbotron-style component for
-        calling extra attention to featured content or information.
-      </p>
+      <h1 class="display-4">Grow Coffee App</h1>
+      <p class="lead">Growing the at home coffee community one cup at a time</p>
       <hr class="my-4" />
+    </div>
+    <div id="navnav">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Research</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Design</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Final Prototype</a>
+        </li>
+      </ul>
+    </div>
+
+    <div class="overview">
       <p>
-        It uses utility classes for typography and spacing to space content out
-        within the larger container.
-      </p>
-      <p class="lead">
-        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+        Grow Coffee App was designed to create a platform to maximize the
+        capabilities of at home coffee makers. The 2020 pandemic made it more
+        difficult for people to visit coffee shops, and most coffee at home just
+        doesn't taste the same. We realized that we needed a professional
+        platform for at home users to learn how to make better specialty drinks
+        and coffee at home.
       </p>
     </div>
-    <!-- CONTENT GOES HERE -->
   </body>
 </html>
