--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
         </li>
       </ul>
     </div>
-
+    <!--overview-->
+    <img src="../images/Screen Shot 2021-02-16 at 6.56.50 PM.png" />
     <div class="overview">
       <p>
         Grow Coffee App was designed to create a platform to maximize the
@@ -44,6 +45,65 @@
         doesn't taste the same. We realized that we needed a professional
         platform for at home users to learn how to make better specialty drinks
         and coffee at home.
+      </p>
+    </div>
+    <!--research-->
+    <div class="research">
+      <p>
+        Qualitative data was collected through five user interviews. This
+        research lasted two days to cover data collection. An online survey
+        derived from our research plan was conducted through Google
+        Forms.Participants consisted of a wide range of coffee drinkers with
+        varying work schedules. Through this research we discovered that users
+        were highly interested in making better coffee at home would greatly
+        value the ability to have their drinks be more similar to barista
+        quality.
+      </p>
+    </div>
+    <!--problem statement-->
+
+    <div class="problemstatement">
+      <p>
+        Grow Coffee App was designed to provide a platform where users educate,
+        inspire, and share knowledge for making the best quality coffee at home.
+        Our research revealed that users care about the quality and taste of
+        their coffee, but many users find it difficult to recreate barista
+        quality coffee at home. As the at-home workforce grows, there's a need
+        for users to learn how to utilize the equipment they have and learn new
+        coffee making techniques, because misguided actions and lack of
+        experience can lead to increased frustration, irritability, and wasting
+        money.
+      </p>
+      <p2
+        ><b>
+          How might we create Grow Coffee App so that users can be successful in
+          making great coffee without wasting effort, time, or resources while
+          growing the at home coffee community?</b
+        >
+      </p2>
+    </div>
+    <!--iteration-->
+    <div class="iteration">
+      <p>
+        After evaluating user needs we began wireframing and rough designs of
+        the grow app. While going through this process we kept this user insight
+        statement in mind.
+      </p>
+      <p2>
+        <b>
+          As the at-home workforce grows, coffee lovers need to learn how to
+          utilize the equipment they have, while staying on schedule, to make
+          cafe quality coffee because misguided actions can lead to increased
+          frustration, irritability, and wasting money.
+        </b>
+      </p2>
+    </div>
+    <!--prototype-->
+    <div class="prototype">
+      <p>
+        Finaly after much iteration and product testing we had a final
+        prototype. We went with a sleek black design and a multi swipe layout to
+        sell our idea of a professional level coffee tutorial app.
       </p>
     </div>
   </body>
