--- a/index.html
+++ b/index.html
@@ -36,8 +36,9 @@
       </ul>
     </div>
     <!--overview-->
-    <img src="../images/Screen Shot 2021-02-16 at 6.56.50 PM.png" />
+    <img src="../images/image1.png" id="image1" />
     <div class="overview">
+      <h1>Research</h1>
       <p>
         Grow Coffee App was designed to create a platform to maximize the
         capabilities of at home coffee makers. The 2020 pandemic made it more
@@ -48,6 +49,17 @@
       </p>
     </div>
     <!--research-->
+    <div class="card" style="width: 18rem">
+      <img src="..." class="card-img-top" alt="..." />
+      <div class="card-body">
+        <h5 class="card-title">Card title</h5>
+        <p class="card-text">
+          Some quick example text to build on the card title and make up the
+          bulk of the card's content.
+        </p>
+        <a href="#" class="btn btn-primary">Go somewhere</a>
+      </div>
+    </div>
     <div class="research">
       <p>
         Qualitative data was collected through five user interviews. This
